Enable XML generation, add comments for all public members, change accessibility levels for members that don't need to be public

--- a/AI_Sideloader/AI_Sideloader.csproj
+++ b/AI_Sideloader/AI_Sideloader.csproj
@@ -29,6 +29,7 @@
     <DefineConstants>TRACE;AI</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>..\bin\BepInEx\plugins\AI_BepisPlugins\AI_Sideloader.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="0Harmony">
