--- a/KK_ExtensibleSaveFormat/KK_ExtensibleSaveFormat.csproj
+++ b/KK_ExtensibleSaveFormat/KK_ExtensibleSaveFormat.csproj
@@ -20,6 +20,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DebugSymbols>false</DebugSymbols>
+    <DocumentationFile>..\bin\BepInEx\plugins\KK_BepisPlugins\ExtensibleSaveFormat.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
     <DebugSymbols>false</DebugSymbols>
