Add normal screenshots; upgrade settings and hotkeys; add capture log messages

--- a/AI_Screencap/AI_Screencap.csproj
+++ b/AI_Screencap/AI_Screencap.csproj
@@ -54,6 +54,10 @@
       <HintPath>..\lib\AIGirl\UnityEngine.CoreModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="UnityEngine.ScreenCaptureModule">
+      <HintPath>..\lib\AIGirl\UnityEngine.ScreenCaptureModule.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\Resources.Designer.cs">
