Moved ConfigurationManager to separate repository

--- a/EC_ConfigurationManager/EC_ConfigurationManager.csproj
+++ b/EC_ConfigurationManager/EC_ConfigurationManager.csproj
@@ -39,6 +39,10 @@
       <HintPath>..\lib\BepInEx5\BepInEx.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="ConfigurationManager">
+      <HintPath>..\lib\ConfigurationManager.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="IL">
       <HintPath>..\lib\EmotionCreators\IL.dll</HintPath>
       <Private>False</Private>
@@ -71,13 +75,6 @@
   <ItemGroup>
     <Compile Include="EC.ConfigurationManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\ConfigurationManager\ConfigurationManager.csproj">
-      <Project>{d56dd83d-7471-463f-b4ff-8910a335833c}</Project>
-      <Name>ConfigurationManager</Name>
-      <Private>False</Private>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="..\Core_ConfigurationManager\Core_ConfigurationManager.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
