Consistent BepInEx folder

--- a/AI_Screencap/AI_Screencap.csproj
+++ b/AI_Screencap/AI_Screencap.csproj
@@ -34,7 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="BepInEx">
-      <HintPath>..\lib\BepInEx5\BepInEx.dll</HintPath>
+      <HintPath>..\lib\BepInEx\BepInEx.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
