--- a/KK_ConfigurationManager/KK_ConfigurationManager.csproj
+++ b/KK_ConfigurationManager/KK_ConfigurationManager.csproj
@@ -37,7 +37,7 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="BepInEx">
-      <HintPath>..\lib\BepInEx5\BepInEx.dll</HintPath>
+      <HintPath>..\lib\BepInEx\BepInEx.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="ConfigurationManager, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
