--- a/EC_ColorCorrector/EC_ColorCorrector.csproj
+++ b/EC_ColorCorrector/EC_ColorCorrector.csproj
@@ -40,7 +40,7 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="BepInEx">
-      <HintPath>..\lib\BepInEx5\BepInEx.dll</HintPath>
+      <HintPath>..\lib\BepInEx\BepInEx.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
