--- a/HS_ConfigurationManager/HS_ConfigurationManager.csproj
+++ b/HS_ConfigurationManager/HS_ConfigurationManager.csproj
@@ -37,7 +37,7 @@
     </Reference>
     <Reference Include="BepInEx, Version=4.1.1.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\lib\BepInEx5\BepInEx.dll</HintPath>
+      <HintPath>..\lib\BepInEx\BepInEx.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="ConfigurationManager">
