Fixed EC and HS ConfigurationManager wrappers having wrong file and plugin version

--- a/src/HS_ConfigurationManager/HS_ConfigurationManager.csproj
+++ b/src/HS_ConfigurationManager/HS_ConfigurationManager.csproj
@@ -67,6 +67,7 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="..\Core_ConfigurationManager\Core_ConfigurationManager.projitems" Label="Shared" />
+  <Import Project="..\Shared\Shared.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>IF EXIST $(SolutionDir)PostBuild.bat CALL "$(SolutionDir)PostBuild.bat" $(TargetPath) HS</PostBuildEvent>
