--- a/src/KK_Sideloader/packages.config
+++ b/src/KK_Sideloader/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="IllusionLibs.BepInEx" version="5.0.0.170" targetFramework="net35" />
-  <package id="IllusionLibs.Koikatu" version="2019.4.27" targetFramework="net35" />
-  <package id="IllusionLibs.XUnity.ResourceRedirector" version="4.6.4" targetFramework="net35" />
+  <package id="IllusionLibs.BepInEx" version="5.0.0.170" targetFramework="net35" developmentDependency="true" />
+  <package id="IllusionLibs.Koikatu" version="2019.4.27" targetFramework="net35" developmentDependency="true" />
+  <package id="IllusionLibs.XUnity.ResourceRedirector" version="4.6.4" targetFramework="net35" developmentDependency="true" />
 </packages>
