More nuspec files

--- a/src/KK_ExtensibleSaveFormat/KK_ExtensibleSaveFormat.nuspec
+++ b/src/KK_ExtensibleSaveFormat/KK_ExtensibleSaveFormat.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>Sideloader.Koikatu</id>
+    <id>ExtensibleSaveFormat.Koikatu</id>
     <version>$version$</version>
     <authors>IllusionMods</authors>
     <projectUrl>https://github.com/IllusionMods/BepisPlugins</projectUrl>
