--- a/src/EC_Sideloader/EC_Sideloader.nuspec
+++ b/src/EC_Sideloader/EC_Sideloader.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>Sideloader.Koikatu</id>
+    <id>Sideloader.EmotionCreators</id>
     <version>$version$</version>
     <authors>IllusionMods</authors>
     <projectUrl>https://github.com/IllusionMods/BepisPlugins</projectUrl>
