Add support for AI head mods

--- a/src/AI_Sideloader/AI_Sideloader.csproj
+++ b/src/AI_Sideloader/AI_Sideloader.csproj
@@ -95,6 +95,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AI.Sideloader.cs" />
+    <Compile Include="AI.UAR.Hooks.cs" />
     <Compile Include="AI.UAR.StructReference.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
